# LOGOS

./: README.md
assets/: schema.sql
crates/logos-compiler/: Cargo.toml
crates/logos-compiler/src/: lib.rs
crates/logos-core/: Cargo.toml
crates/logos-core/src/: lib.rs
crates/logos-runtime/: Cargo.toml
crates/logos-runtime/src/: lib.rs
crates/logos-std/: Cargo.toml
crates/logos-std/src/: lib.rs
logos-docs/: README.md  WHITEPAPER.md
logos-docs/diagrams/: architecture.mmd  execution-flow.mmd  sediment-bedrock.mmd
logos-docs/meta/: design-invariants.md  terminology.md
logos-docs/rfc/: RFC-0001-logos-protocol.md  RFC-0002-graph-substrate.md  RFC-0003-threat-model.md  RFC-0004-ledger-governance.md  RFC-0005-sediment-bedrock-model.md  RFC-0006-comparative-analysis.md
skills/graph-operator/: SKILL.md
skills/logos-architect/: SKILL.md
skills/logos-visualizer/: SKILL.md
skills/rust-payload-writer/: SKILL.md
skills/rust-payload-writer/references/: allowed_crates.list
tools/logos-cli/: Cargo.toml
tools/logos-cli/src/: main.rs
