[package]
name = "logos-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
